--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,11 @@ dependencies:
   io: ^1.0.3  
   cli_util: ^0.3.3
   yaml: ^3.1.0
-
+  code_builder: ^4.1.0
+  glob: ^2.0.1
+  prompts: ^2.0.0
+  archive: ^3.1.2
+  
 dev_dependencies:
   test: ">=1.15.0 <2.0.0"
 
